Bug 1817129: Ensure OnSessionClosed is called in error paths for AsyncConnect r=kershaw,necko-reviewers

WebTransportSessionProxy::AsyncConnect needs to ensure the caller gets the
normal callback from AsyncConnect, or require that they not wait for it on
an error return from AsyncConnect.   Also, several error paths didn't clear
the listener and didn't change the state to 'DONE'.

Differential Revision: https://phabricator.services.mozilla.com/D170028